<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendsFragment">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/owe_tab_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/left_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/owed_tab_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/center_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/total_balance_tab_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/right_tab" />
    </com.google.android.material.tabs.TabLayout>
</FrameLayout>