<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/stage2"
    android:orientation="vertical"
    tools:context=".AddBill">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/currency"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/currency"
            android:textColor="#FFF"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/bluestage1"
            android:ems="10"
            android:hint="0.00"
            android:inputType="numberDecimal"
            android:textColor="#FFF"
            android:textSize="30sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/paidby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/paidby"
            android:textColor="#FFF"
            android:textSize="12sp" />

        <Button
            android:id="@+id/paidbybutton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/textviewborder"
            android:clickable="true"
            android:padding="5dp"
            android:text="@string/paidbytv"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/split"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/split"
            android:textColor="#FFF"
            android:textSize="12sp" />

        <Button
            android:id="@+id/splitbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/textviewborder"
            android:clickable="true"
            android:padding="5dp"
            android:text="@string/splittv"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/fullstop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="."
            android:textColor="#FFF"
            android:textSize="24sp" />
    </TableRow>

</LinearLayout>