<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendsFragment.MainFragment"
    android:background="@color/colorPrimaryDark">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/friends_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMaxWidth="0dp"
        app:tabGravity="fill"
        app:tabMode="fixed"
        app:tabIndicatorColor="@color/colorSecondary"
        app:tabTextColor="@color/colorSecondary">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/owe_tab_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFA500"
            android:text="@string/left_tab"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/owed_tab_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#008000"
            android:text="@string/center_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/total_balance_tab_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/right_tab" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/friends_view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_anchor="@+id/friends_tab_layout"
        app:layout_anchorGravity="bottom"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </androidx.viewpager.widget.ViewPager>

</androidx.coordinatorlayout.widget.CoordinatorLayout>